--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.0.0",
+    "@tanstack/react-query": "^5.85.5",
     "aos": "^2.3.4",
+    "axios": "^1.11.0",
     "chart.js": "^4.4.8",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -26,13 +28,16 @@
     "emailjs-com": "^3.2.0",
     "firebase": "^11.3.0",
     "flowbite-react": "^0.10.2",
+    "formik": "^2.4.6",
     "i18next": "^24.2.2",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "keen-slider": "^6.8.6",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.5.1",
+    "react-hot-toast": "^2.6.0",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
     "react-responsive-modal": "^6.4.2",
@@ -41,7 +46,8 @@
     "react-spinners": "^0.15.0",
     "react-timekeeper": "^2.2.1",
     "styled-components": "^6.1.15",
-    "sweetalert2": "^11.6.13"
+    "sweetalert2": "^11.6.13",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
