--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jwt-decode": "^4.0.0",
     "keen-slider": "^6.8.6",
     "react": "^19.0.0",
+    "react-calendar": "^6.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
