--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
+    "react-facebook-pixel": "^1.0.4",
     "react-hot-toast": "^2.6.0",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
