--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hello-pangea/dnd": "^18.0.1",
+    "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.0.0",
     "@tanstack/react-query": "^5.85.5",
     "aos": "^2.3.4",
     "axios": "^1.11.0",
     "chart.js": "^4.4.8",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "echarts": "^5.6.0",
@@ -34,10 +36,12 @@
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "keen-slider": "^6.8.6",
+    "lucide-react": "^0.562.0",
     "react": "^18.3.1",
     "react-calendar": "^6.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.1.0",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^18.3.1",
     "react-facebook-pixel": "^1.0.4",
     "react-hot-toast": "^2.6.0",
@@ -49,6 +53,7 @@
     "react-spinners": "^0.15.0",
     "styled-components": "^6.1.15",
     "sweetalert2": "^11.6.13",
+    "tailwind-merge": "^3.4.0",
     "yup": "^1.7.0"
   },
   "devDependencies": {
